[package]
name = "styrene-identity"
version = "0.1.0"
edition = "2021"
description = "Identity signing trait and HKDF key derivation hierarchy for Styrene"

[dependencies]
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }
thiserror = "2"
async-trait = "0.1"

# Tier D: EncryptedFile backend
argon2 = { version = "0.5", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }

[features]
default = ["file-signer"]
file-signer = ["argon2", "chacha20poly1305"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
