[package]
name = "styrene-identity"
version = "0.3.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/styrene-lab/styrene-rs"
readme = "README.md"
keywords = ["identity", "hkdf", "ed25519", "key-derivation", "signing"]
categories = ["cryptography", "authentication"]
description = "Deterministic key hierarchy for Styrene mesh nodes — one root secret derives SSH, git signing, age, WireGuard, and agent delegation keys via HKDF-SHA256"

[dependencies]
hkdf = "0.12"
sha2 = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = { version = "1", features = ["derive"] }
subtle = "2.5"
thiserror = "2"
async-trait = "0.1"
hex = "0.4"

# Tier D: EncryptedFile backend
argon2 = { version = "0.5", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }

# Signing and public key derivation
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"], optional = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"], optional = true }

# Tier A: YubiKey FIDO2 hmac-secret
ctap-hid-fido2 = { version = "3.5", optional = true }
base64 = { version = "0.22", optional = true }

# age Bech32 encoding
bech32 = { version = "0.11", optional = true }

# SSH agent
ssh-agent-lib = { version = "0.5", optional = true }
ssh-key = { version = "0.6", features = ["ed25519"], optional = true }
tokio = { version = "1", features = ["sync"], optional = true }

[features]
default = ["file-signer"]
file-signer = ["argon2", "chacha20poly1305", "signing"]
signing = ["ed25519-dalek", "x25519-dalek", "base64"]
age-format = ["bech32", "signing"]
yubikey = ["ctap-hid-fido2", "base64", "signing"]
ssh-agent = ["ssh-agent-lib", "ssh-key", "signing", "tokio"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tempfile = "3"
hex = "0.4"
ed25519-dalek = { version = "=2.1.1", features = ["rand_core"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
sha2 = "0.10"
sha3 = "0.10"
data-encoding = "2"
base64 = "0.22"
serde_json = "1"
proptest = "1"
rand = "0.8"
