[package]
name = "styrene-ipc-server"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Unix socket IPC server exposing the Daemon trait over a framed msgpack protocol"
keywords = ["styrene", "reticulum", "ipc", "server", "unix-socket"]
categories = ["network-programming"]

[lib]
name = "styrene_ipc_server"

[dependencies]
async-trait.workspace = true
log.workspace = true
rmp-serde.workspace = true
rmpv.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
styrene-ipc.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["io-util", "net", "rt", "sync", "macros", "time"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
env_logger = "0.11"
rmpv.workspace = true

[lints]
workspace = true
