[package]
name = "styrene-lxmf"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Rust LXMF messaging protocol — message encoding, stamps, delivery, propagation, SDK domain types"
keywords = ["styrene", "reticulum", "lxmf", "mesh", "messaging"]
categories = ["network-programming", "encoding"]

[lib]
name = "lxmf_core"

[dependencies]
rns_core = { package = "styrene-rns", version = "0.1.0", path = "../styrene-rns" }
base64.workspace = true
hex.workspace = true
rand_core = { workspace = true, features = ["getrandom"] }
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rmp-serde.workspace = true
rmpv = { workspace = true, features = ["with-serde"] }
serde = { workspace = true, features = ["derive"] }
serde_bytes.workspace = true
serde_json = { version = "1", default-features = false, features = ["alloc"], optional = true }
sha2.workspace = true
x25519-dalek.workspace = true

# SDK-only dependencies (optional, gated by "sdk" feature)
thiserror = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["dep:serde_json", "serde_json/std"]
alloc = []
sdk = ["std", "dep:thiserror"]

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "core_message_paths"
harness = false

[lints]
workspace = true
